<resources>
    <string name="app_name">IT-COFFEE</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>