<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"

    android:padding="30sp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:padding="10dp"
        app:srcCompat="@drawable/log2"

        />

    <TextView
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/sign_in"
        android:layout_marginBottom="10dp">
    </TextView>

    <TextView
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="We've already met!"
        android:layout_marginBottom="20dp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"

            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/padlock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textSize="15sp"
        android:textColor="#A97C37"
        android:id="@+id/forgetPassword"
        android:text="Forgot password ?"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"></TextView>


    <ProgressBar
        android:id="@+id/prgBar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ProgressBar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:gravity="center"
        android:text="Login"
        android:backgroundTint="#55433C">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:textSize="15sp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account ?"
            android:layout_marginEnd="60dp"
            />

        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#A97C37"
            android:id="@+id/registerNow"
            android:text="@string/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" ></TextView>
    </LinearLayout>




</LinearLayout>

    <!--    android:text="@string/login"-->